...
            );
            context.read<MovieSearchBloc>().add(
                  SearchMoviesRequested(query),
                );
          },
          decoration: const InputDecoration(
            hintText: 'Search movie titles',
            prefixIcon: Icon(Icons.search_rounded),
          ),
          textInputAction: TextInputAction.search,
        ),
        const SizedBox(height: 18),
        Text('Search Result', style: kHeading6),
...
            );
            context.read<TvSeriesSearchBloc>().add(
                  SearchTvSeriesRequested(query),
                );
          },
          decoration: const InputDecoration(
            hintText: 'Search TV series titles',
            prefixIcon: Icon(Icons.search_rounded),
          ),
          textInputAction: TextInputAction.search,
        ),
        const SizedBox(height: 18),
        Text('Search Result', style: kHeading6),
...
