...
            ),
          ),
          SliverToBoxAdapter(
            child: BlocBuilder<MovieListBloc, MovieListState>(
              builder: (context, data) {
                return _MovieSection(
                  title: 'Now Playing',
                  movies: data.nowPlayingMovies,
                  state: data.nowPlayingState,
                  message: data.message,
                );
              },
            ),
...
